<resources>
    <string name="app_name">橙子</string>

    <string name="tab1">首页</string>
    <string name="tab2">快讯</string>
    <string name="tab3">消息</string>
    <string name="tab4">我的</string>
    <string name="noFind">找不到软件？</string>
    <string name="businessAlliance">商业联盟</string>
    <string name="inquire">立即咨询</string>
    <string name="join">立即加盟</string>
    <string name="recommend">优质推荐</string>
    <string name="defaultDay">%s 天</string>
    <string name="projectType">项目类型：</string>
    <string name="languageDemand">语言要求：</string>
    <string name="expectedDuration">期望工期：</string>
    <string name="needDes">需求描述：</string>
    <string name="desNotice">请输入您的投诉或建议内容</string>
    <string name="contact">联系方式</string>
    <string name="inputContact">请输入联系方式</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="custom">定制</string>
    <string name="myFoot">我的足迹</string>
    <string name="customPrivate">私人定制</string>
    <string name="mySchedule">我的进度</string>
    <string name="myConcern">我的收藏</string>
    <string name="shopJoin">商家入驻</string>
    <string name="inputAccount">请输入账号</string>
    <string name="inputPass">请输入密码</string>
    <string name="forgetPass">忘记密码</string>
    <string name="login">登录</string>
    <string name="registerNow"><![CDATA[ 还没有账号? <font color=\"#F9C349\">立即注册</font>]]></string>
    <string name="phone">手机号</string>
    <string name="send">获取验证码</string>
    <string name="loginPass">登录密码</string>
    <string name="loginPassAgain">再次输入登录密码</string>
    <string name="register">注册</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="inputCode">请输入验证码</string>
    <string name="protocol">我已阅读《软件用户协议》</string>
    <string name="passTwiceError">两次登录密码不一致</string>
    <string name="userProtocol">用户协议</string>
    <string name="readProtocol">请阅读用户协议</string>
    <string name="loginRegister">登录/注册</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="setAvatar">设置头像</string>
    <string name="setNick">设置昵称</string>
    <string name="setSignature">修改签名</string>
    <string name="setPass">修改密码</string>
    <string name="inputNickname">请输入昵称</string>
    <string name="changePass">修改密码</string>
    <string name="loginNewPass">请输入新密码</string>
    <string name="loginNewPassAgain">请再次输入新密码</string>
    <string name="exitSuccess">退出成功</string>
    <string name="joinSupplier">入驻供应商</string>
    <string name="companyName">公司名称</string>
    <string name="inputCompanyName">请输入您的公司名称</string>
    <string name="contactPerson">联系人</string>
    <string name="contactPhone">联系电话</string>
    <string name="productType">主营类型</string>
    <string name="inputContactName">请输入联系人姓名</string>
    <string name="inputContactPhone">请输入您的联系电话</string>
    <string name="chooseProjectType">请选择主营类型</string>
    <string name="classification">分类</string>
    <string name="sortTotal">综合排序</string>
    <string name="more">更多</string>
    <string name="cycle">周期</string>
    <string name="viewNum">浏览量</string>
    <string name="productStyle">产品类型</string>
    <string name="technologyType">技术类型</string>
    <string name="developCycle">开发周期</string>
    <string name="filter">筛选</string>
    <string name="reset">重置</string>
    <string name="productFeatures">产品功能</string>
    <string name="reservationDes">预约专人答疑,一对一服务</string>
    <string name="mainFeatures">核心特色</string>
    <string name="interfaceDisplay">界面展示</string>
    <string name="saleService">售后保障</string>
    <string name="recommendManager">推荐经理人</string>
    <string name="otherProject">其他相似项目</string>
    <string name="msgContact">在线咨询</string>
    <string name="phoneContact">电话咨询</string>
    <string name="clickDemo">点击查看演示</string>
    <string name="chooseTime">选择时间</string>
    <string name="chooseData">选择日期</string>
    <string name="wantTime">期望演示时间</string>
    <string name="yourContactPhone">您的联系方式</string>
    <string name="reservationNow">立即预约</string>
    <string name="reservation">预约</string>
    <string name="reservationSuccess">您已预约成功，请等待客户经理致电</string>
    <string name="sendContent">发送</string>
    <string name="callPhone">语音通话</string>
    <string name="inputChatContent">请输入聊天内容</string>
    <string name="noMsg">您还未收到消息</string>
    <string name="noFoot">还没有浏览商品</string>
    <string name="noConcern">还没有收藏商品</string>

</resources>
