<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textColor="@color/colorOrange1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textColor="@color/colorGray1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckedTextView
        android:id="@+id/tvSetAvatar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_down"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/setAvatar"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConfirm"
        app:layout_constraintWidth_percent="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>