<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/wantTime"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorGray3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_constraintWidth_percent="0.85" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:lines="2"
        android:text="@string/chooseData"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toStartOf="@id/tv2"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toTopOf="@id/view1" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorGray1"
        app:layout_constraintEnd_toEndOf="@id/tvData"
        app:layout_constraintStart_toStartOf="@id/tvData"
        app:layout_constraintTop_toBottomOf="@id/tvData"
        app:layout_constraintWidth_percent="0.1" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        android:textColor="@color/colorGray2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toStartOf="@id/tvTime"
        app:layout_constraintStart_toEndOf="@id/tvData"
        app:layout_constraintTop_toTopOf="@id/view1" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:lines="2"
        android:text="@string/chooseTime"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintStart_toEndOf="@id/tv2"
        app:layout_constraintTop_toTopOf="@id/view1" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorGray1"
        app:layout_constraintEnd_toEndOf="@id/tvTime"
        app:layout_constraintStart_toStartOf="@id/tvTime"
        app:layout_constraintTop_toBottomOf="@id/tvTime"
        app:layout_constraintWidth_percent="0.1" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/yourContactPhone"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_gray_frame5"
        android:hint="@string/inputContactPhone"
        android:padding="8dp"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/view1"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/tv3" />

    <TextView
        android:id="@+id/tvReservation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_yellow_bg25"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/reservationNow"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPhone"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>